Fix lightbar alignment

--- a/resources/assets/less/bem/artist-link-button.less
+++ b/resources/assets/less/bem/artist-link-button.less
@@ -47,7 +47,7 @@
   font-size: 16px;
   height: 40px;
   margin-bottom: 5px;
-  padding: 5px 10px;
+  padding: 6px 10px;
   user-select: none;
 
   .default-text-shadow();
@@ -69,7 +69,7 @@
   }
 
   &__lightbar {
-    height: 25px;
+    height: 100%;
     margin-right: 15px;
     width: 7px;
     border-radius: 7px;
@@ -85,7 +85,6 @@
   }
 
   &__chevron {
-    right: 0;
     font-size: 14px;
     transition: 0.1s ease-out;
   }
